--- a/js/1+2 lab S2/index.html
+++ b/js/1+2 lab S2/index.html
@@ -4,6 +4,9 @@
     <script src="p5.js"></script>
     <script src="scetch.js"></script>
     <style> body {padding: 0; margin: 0;} </style>
+
+    <meta charset="UTF-8">
+</div>
   </head>
   <body>
   </body>
