--- a/js/S2/index.html
+++ b/js/S2/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <script src="p5.js"></script>
+    <script src="matter.js"></script>
     <script src="scetch.js"></script>
     <style> body {padding: 0; margin: 0;} </style>
-
     <meta charset="UTF-8">
 </div>
   </head>
